# smart-monitor

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.qml  nysse_wrap.cpp  nysse_wrap.hh
in_progress/: main.cpp
include/: json_wrapper.cpp  json_wrapper.h
